examples/test/testpolicy12921.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12921
  namespace: namespace136
spec:
  podSelector:
    matchLabels:
      key6: value5
      key23: value48
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key30: value8
          key1: value15
      podSelector:
        matchLabels:
          key41: value44
          key14: value41
